# simd_testbed

./: CMakeLists.txt  build.sh  dump  dump.txt  linalg.h  makefile  naive_adaptors.h  naive_adaptors.hpp  simd.cpp  simd_adaptors.h  simd_adaptors.hpp
benchmarks/: CMakeLists.txt
benchmarks/algorithm/: CMakeLists.txt  minmax_value.cpp
benchmarks/disassembly/dot_product/: dot_product.cpp  dump_dot_product_gcc-O3  dump_dot_product_gcc-O3-avx2-ffastmath
benchmarks/disassembly/linear_algebra/: matrix_mul.cpp
benchmarks/disassembly/matrix_mul/: dump_matrix_mul_gcc-O3-avx2  dump_matrix_mul_gcc-O3-avx2-ffastmath  matrix_mul.cpp
benchmarks/disassembly/numeric/: add.cpp  dump_gcc-O3-avx2
benchmarks/image_processing/: CMakeLists.txt  threshold.cpp
benchmarks/linear_algebra/: CMakeLists.txt  matrix.cpp
benchmarks/numeric/: CMakeLists.txt  add_saturated.cpp
benchmarks/statistics/: CMakeLists.txt  univariate_statistics.cpp
include/: linalg.hpp
include/simd_testbed/: integer_literals.hpp  traits.hpp
include/simd_testbed/algorithm/: algorithm.hpp  traits.hpp
include/simd_testbed/algorithm/detail/: minmax_value_impl.hpp
include/simd_testbed/dsp/: filter_median.hpp
include/simd_testbed/image_processing/: threshold.hpp  threshold_cpp.hpp
include/simd_testbed/image_processing/detail/: threshold_impl.hpp
include/simd_testbed/linear_algebra/: dot_product.hpp  matrix.hpp  matrix_cpp.hpp  matrix_traits.hpp  naive_adaptors.hpp  std_simd_adaptors.hpp
include/simd_testbed/linear_algebra/detail/: matrix_cpp_impl.hpp  matrix_impl.hpp
include/simd_testbed/numeric/: add_saturated.hpp
include/simd_testbed/numeric/detail/: add_saturated_impl.hpp
include/simd_testbed/statistics/: univariate_statistics.hpp  univariate_statistics_cpp.hpp
include/simd_testbed/statistics/detail/: univariate_statistics_impl.hpp
src/: simd.cpp
tests/: CMakeLists.txt
tests/dsp/: CMakeLists.txt  filter_median.cpp
tests/image_processing/: CMakeLists.txt  threshold.cpp
tests/linear_algebra/: CMakeLists.txt  matrix.cpp
tests/numeric/: CMakeLists.txt  add_saturated.cpp
tests/statistics/: CMakeLists.txt  univariate_statistics.cpp
utilities/: random.hpp  stop_watch.hpp  utilities.hpp
